QComboBox::modelColumn was not respected when selecting an item

Auto-test included

Reviewed-by: Olivier
Task-number: QTBUG-10491