tests/auto/qcombobox/tst_qcombobox.cpp
@@ -157,6 +157,7 @@ private slots:
     void keyBoardNavigationWithMouse();
     void task_QTBUG_1071_changingFocusEmitsActivated();
     void maxVisibleItems();
+    void task_QTBUG_10491_currentIndexAndModelColumn();
 
 protected slots:
     void onEditTextChanged( const QString &newString );
@@ -2560,6 +2561,24 @@ void tst_QComboBox::maxVisibleItems()
     // QCombobox without a popup does not work, see QTBUG-760
 }
 
+void tst_QComboBox::task_QTBUG_10491_currentIndexAndModelColumn()
+{
+    QComboBox comboBox;
+
+    QStandardItemModel model(4, 4, &comboBox);
+    for (int i = 0; i < 4; i++){
+        model.setItem(i, 0, new QStandardItem(QString("Employee Nr %1").arg(i)));
+        model.setItem(i, 1, new QStandardItem(QString("Street Nr %1").arg(i)));
+        model.setItem(i, 2, new QStandardItem(QString("Town Nr %1").arg(i)));
+        model.setItem(i, 3, new QStandardItem(QString("Phone Nr %1").arg(i)));
+    }
+    comboBox.setModel(&model);
+    comboBox.setModelColumn(0);
+
+    QComboBoxPrivate *d = static_cast<QComboBoxPrivate *>(QComboBoxPrivate::get(&comboBox));
+    d->setCurrentIndex(model.index(2, 2));
+    QCOMPARE(QModelIndex(d->currentIndex), model.index(2, comboBox.modelColumn()));
+}
 
 QTEST_MAIN(tst_QComboBox)
 #include "tst_qcombobox.moc"
